# cognitive-models

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  model.rs
src/models/: mod.rs  phi3.rs  qwen3.rs
tests/: model_trait.rs  phi3_config.rs  qwen3_config.rs
