[package]
name = "cognitive-models"
version = "0.3.0"
edition = "2024"
description = "Candle-based transformer model implementations with a model-agnostic CognitiveLM trait for generation and embedding"
license = "MIT"
repository = "https://github.com/afstanton/cognitive-models"

[features]
default = ["metal", "test-support"]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
# Expose RecordingModel and test helpers to downstream crates in their test builds
test-support = []

[dependencies]
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
candle-transformers = { version = "0.9" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1" }
